@@ -9,6 +9,11 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/137
+  C-API: All functions of the form Py{Object, Function, CFunction}_*Call* now
+  use STACKLESS_PROMOTE_xxx internally and may be called with
+  slp_try_stackless != 0. See the comment in core/stackless_impl.h.
+
 - https://github.com/stackless-dev/stackless/issues/133
   WARNING: C-extension modules written for Stackless Python must be recompiled
   for Stackless Python 3.6, because definition of METH_STACKLESS changed.
